feat: Implementar envio de email do formulário de contato
Backend:
- Instalado nodemailer para envio de emails
- Criada rota POST /api/contato/enviar
- Email de destino dinâmico: usa site_email do CMS
- Fallback para EMAIL_USER do .env se não configurado no CMS
- Template HTML responsivo para o email
- Reply-to configurado para o email do visitante
- Logs detalhados de envio

Frontend:
- Atualizado ContatoSection com estado de formulário
- Implementado handleChange para controlar inputs
- Feedback visual durante envio (botão desabilitado, texto 'ENVIANDO...')
- Mensagens de sucesso/erro com animação
- Limpeza automática do formulário após envio
- Estilos para mensagens de feedback
- Integração com apiService.enviarContato()

Configuração:
- Adicionado EMAIL_CONFIG.md com guia completo
- Atualizado .env.example com variáveis EMAIL_USER e EMAIL_PASS
- Documentação sobre Senha de App do Gmail
- Instruções para desenvolvimento e produção

Build testado e funcionando sem erros

--- a/ceart-cms/.env.example
+++ b/ceart-cms/.env.example
@@ -6,3 +6,16 @@ FRONTEND_URL=https://seu-site.vercel.app
 
 # Ambiente
 NODE_ENV=production
+
+# Configuração de Email (Gmail)
+# Para usar Gmail, você precisa gerar uma "Senha de app"
+# Acesse: https://myaccount.google.com/apppasswords
+EMAIL_USER=feiraceart@gmail.com
+EMAIL_PASS=sua_senha_de_app_aqui
+
+# Observações para configuração de email:
+# 1. Não commitar arquivo .env com dados reais
+# 2. Criar arquivo .env local com as credenciais reais
+# 3. A senha deve ser uma "Senha de app" do Gmail, não a senha normal
+# 4. Para gerar senha de app: Google Account > Security > 2-Step Verification > App passwords
+# 5. No Railway, adicionar estas variáveis de ambiente nas configurações do projeto
