--- a/ceart-cms/package.json
+++ b/ceart-cms/package.json
@@ -34,6 +34,7 @@
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.4-lts.1",
+    "nodemailer": "^7.0.9",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
