--- a/ceart-cms/.env.example
+++ b/ceart-cms/.env.example
@@ -7,15 +7,28 @@ FRONTEND_URL=https://seu-site.vercel.app
 # Ambiente
 NODE_ENV=production
 
-# Configuração de Email (Gmail)
+# Configuração de Email (Gmail) - OBRIGATÓRIO PARA ENVIO DE FORMULÁRIO
 # Para usar Gmail, você precisa gerar uma "Senha de app"
 # Acesse: https://myaccount.google.com/apppasswords
-EMAIL_USER=feiraceart@gmail.com
-EMAIL_PASS=sua_senha_de_app_aqui
+EMAIL_USER=seu_email@gmail.com
+EMAIL_PASS=sua_senha_de_app_de_16_caracteres
 
-# Observações para configuração de email:
-# 1. Não commitar arquivo .env com dados reais
-# 2. Criar arquivo .env local com as credenciais reais
-# 3. A senha deve ser uma "Senha de app" do Gmail, não a senha normal
-# 4. Para gerar senha de app: Google Account > Security > 2-Step Verification > App passwords
-# 5. No Railway, adicionar estas variáveis de ambiente nas configurações do projeto
+# ⚠️  IMPORTANTE:
+# - Ambas as variáveis EMAIL_USER e EMAIL_PASS são OBRIGATÓRIAS
+# - Sem elas, o formulário de contato não enviará emails
+# - A senha deve ser uma "Senha de app" do Gmail, NÃO a senha normal da conta
+# - Senha de app tem 16 caracteres (sem espaços): abcdefghijklmnop
+
+# Como gerar senha de app:
+# 1. Acesse: https://myaccount.google.com/security
+# 2. Ative "Verificação em duas etapas" (se não estiver ativa)
+# 3. Acesse: https://myaccount.google.com/apppasswords
+# 4. Selecione "Outro (nome personalizado)"
+# 5. Digite: "Site Feira CEART"
+# 6. Clique em GERAR
+# 7. Copie a senha de 16 caracteres e cole em EMAIL_PASS
+
+# Configuração em Produção (Railway):
+# - Adicione EMAIL_USER e EMAIL_PASS nas variáveis de ambiente do projeto
+# - Não commite o arquivo .env com dados reais no repositório
+# - Use .env apenas para desenvolvimento local
