--- a/ceart-cms/.env.example
+++ b/ceart-cms/.env.example
@@ -7,26 +7,42 @@ FRONTEND_URL=https://seu-site.vercel.app
 # Ambiente
 NODE_ENV=production
 
-# Configuração de Email (Gmail) - OBRIGATÓRIO PARA ENVIO DE FORMULÁRIO
-# Para usar Gmail, você precisa gerar uma "Senha de app"
-# Acesse: https://myaccount.google.com/apppasswords
+# ===== CONFIGURAÇÃO DE EMAIL =====
+# Opção 1: Configuração SMTP explícita (RECOMENDADA para Railway/produção)
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
+MAIL_USERNAME=seu-email@gmail.com
+MAIL_PASSWORD=sua-senha-de-app
+MAIL_FROM=seu-email@gmail.com
+
+# Opção 2: Configuração Gmail simples (FALLBACK - compatibilidade)
 EMAIL_USER=seu_email@gmail.com
 EMAIL_PASS=sua_senha_de_app_de_16_caracteres
 
 # ⚠️  IMPORTANTE:
-# - Ambas as variáveis EMAIL_USER e EMAIL_PASS são OBRIGATÓRIAS
-# - Sem elas, o formulário de contato não enviará emails
-# - A senha deve ser uma "Senha de app" do Gmail, NÃO a senha normal da conta
-# - Senha de app tem 16 caracteres (sem espaços): abcdefghijklmnop
+# OPÇÃO 1 (Recomendada): Use SMTP_SERVER, SMTP_PORT, MAIL_USERNAME, MAIL_PASSWORD
+# OPÇÃO 2 (Fallback): Use EMAIL_USER e EMAIL_PASS
+# 
+# Para Gmail (Opção 1 - Recomendada):
+# - SMTP_SERVER=smtp.gmail.com
+# - SMTP_PORT=587 (STARTTLS) ou 465 (SSL)
+# - MAIL_USERNAME=seu-email@gmail.com
+# - MAIL_PASSWORD=senha-de-app-do-gmail
+# - MAIL_FROM=seu-email@gmail.com
+#
+# Para outros provedores:
+# - SendGrid: SMTP_SERVER=smtp.sendgrid.net, PORT=587
+# - Mailgun: SMTP_SERVER=smtp.mailgun.org, PORT=587
+# - Outlook: SMTP_SERVER=smtp-mail.outlook.com, PORT=587
 
-# Como gerar senha de app:
+# Como gerar senha de app do Gmail:
 # 1. Acesse: https://myaccount.google.com/security
 # 2. Ative "Verificação em duas etapas" (se não estiver ativa)
 # 3. Acesse: https://myaccount.google.com/apppasswords
 # 4. Selecione "Outro (nome personalizado)"
 # 5. Digite: "Site Feira CEART"
 # 6. Clique em GERAR
-# 7. Copie a senha de 16 caracteres e cole em EMAIL_PASS
+# 7. Copie a senha de 16 caracteres e cole em MAIL_PASSWORD
 
 # Configuração em Produção (Railway):
 # - Adicione EMAIL_USER e EMAIL_PASS nas variáveis de ambiente do projeto
