--- a/ceart-cms/.env.example
+++ b/ceart-cms/.env.example
@@ -7,42 +7,18 @@ FRONTEND_URL=https://seu-site.vercel.app
 # Ambiente
 NODE_ENV=production
 
-# ===== CONFIGURAÇÃO DE EMAIL =====
-# Opção 1: Configuração SMTP explícita (RECOMENDADA para Railway/produção)
-SMTP_SERVER=smtp.gmail.com
-SMTP_PORT=587
-MAIL_USERNAME=seu-email@gmail.com
-MAIL_PASSWORD=sua-senha-de-app
-MAIL_FROM=seu-email@gmail.com
+# ===== CONFIGURAÇÕES DE CONTATO =====
+# O sistema de contato agora usa caixa de entrada no CMS
+# Não são necessárias configurações de email SMTP
+# As mensagens são salvas diretamente no banco de dados
 
-# Opção 2: Configuração Gmail simples (FALLBACK - compatibilidade)
-EMAIL_USER=seu_email@gmail.com
-EMAIL_PASS=sua_senha_de_app_de_16_caracteres
-
-# ⚠️  IMPORTANTE:
-# OPÇÃO 1 (Recomendada): Use SMTP_SERVER, SMTP_PORT, MAIL_USERNAME, MAIL_PASSWORD
-# OPÇÃO 2 (Fallback): Use EMAIL_USER e EMAIL_PASS
-# 
-# Para Gmail (Opção 1 - Recomendada):
-# - SMTP_SERVER=smtp.gmail.com
-# - SMTP_PORT=587 (STARTTLS) ou 465 (SSL)
-# - MAIL_USERNAME=seu-email@gmail.com
-# - MAIL_PASSWORD=senha-de-app-do-gmail
-# - MAIL_FROM=seu-email@gmail.com
-#
-# Para outros provedores:
-# - SendGrid: SMTP_SERVER=smtp.sendgrid.net, PORT=587
-# - Mailgun: SMTP_SERVER=smtp.mailgun.org, PORT=587
-# - Outlook: SMTP_SERVER=smtp-mail.outlook.com, PORT=587
-
-# Como gerar senha de app do Gmail:
-# 1. Acesse: https://myaccount.google.com/security
-# 2. Ative "Verificação em duas etapas" (se não estiver ativa)
-# 3. Acesse: https://myaccount.google.com/apppasswords
-# 4. Selecione "Outro (nome personalizado)"
-# 5. Digite: "Site Feira CEART"
-# 6. Clique em GERAR
-# 7. Copie a senha de 16 caracteres e cole em MAIL_PASSWORD
+# ✨ NOVA FUNCIONALIDADE:
+# - Formulário de contato salva mensagens diretamente no banco SQLite
+# - Interface no CMS para visualizar todas as mensagens (aba "Mensagens")  
+# - Sistema de notificações com badge de mensagens não lidas
+# - Paginação, filtros e sistema de marcar como lida/não lida
+# - Resposta instantânea ao usuário, sem dependência de email SMTP
+# - Todas as mensagens ficam armazenadas permanentemente para consulta
 
 # Configuração em Produção (Railway):
 # - Adicione EMAIL_USER e EMAIL_PASS nas variáveis de ambiente do projeto
